Uses now can take export as specified in module or override. Updated all sample code to use methods.